<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="56dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:layout_gravity="center_horizontal"
                android:textSize="21sp"
                android:textColor="@color/text_color_basic"
                android:lineHeight="28sp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal"
                android:background="#f3f3f3">

                <View
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginRight="21dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/dt_btn_locate_nor" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sub_title_text1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_check_sub_title1"
                        android:textSize="18sp"
                        android:lineHeight="23sp"
                        android:textColor="@color/text_color_dark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="21dp"
                        android:text="@string/permission_check_detail_text1"
                        android:textSize="15sp"
                        android:lineHeight="20sp"
                        android:textColor="@color/text_color_sub"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal"
                android:background="#f3f3f3">

                <View
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginRight="21dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/dt_btn_call_nor" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sub_title_text2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_check_sub_title2"
                        android:textSize="18sp"
                        android:lineHeight="23sp"
                        android:textColor="@color/text_color_dark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="21dp"
                        android:text="@string/permission_check_detail_text2"
                        android:textSize="15sp"
                        android:lineHeight="20sp"
                        android:textColor="@color/text_color_sub"/>

                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:orientation="horizontal"
                android:background="#f3f3f3">

                <View
                    android:layout_width="36dp"
                    android:layout_height="36dp"
                    android:layout_marginLeft="21dp"
                    android:layout_marginRight="21dp"
                    android:layout_gravity="center_vertical"
                    android:background="@drawable/dt_btn_data_nor" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/sub_title_text3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/permission_check_sub_title3"
                        android:textSize="18sp"
                        android:lineHeight="23sp"
                        android:textColor="@color/text_color_dark"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="21dp"
                        android:text="@string/permission_check_detail_text3"
                        android:textSize="15sp"
                        android:lineHeight="20sp"
                        android:textColor="@color/text_color_sub"/>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/btn_bottom"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:elevation="4dp"
                android:text="@string/app_text_ok"
                android:textSize="20sp"
                android:textColor="@drawable/bottom_btn_text_color"
                android:lineHeight="37sp"
                android:gravity="center"
                android:background="@drawable/bottom_btn_04"/>

        </LinearLayout>

    </ScrollView>

</LinearLayout>